<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="it.polito.mad.insane.lab2.EditProfile">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/coverPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    android:src="@drawable/ic_default_cover_photo"
                    app:layout_collapseMode="parallax"
                    />

                <TextView
                    android:id="@+id/editCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_cover"
                    android:textSize="16sp"
                    android:layout_alignBottom="@+id/coverPhoto"
                    android:layout_alignRight="@+id/coverPhoto"
                    android:layout_alignEnd="@+id/coverPhoto"
                    android:drawableLeft="@drawable/ic_perm_media_black_24dp"
                    android:drawableStart="@drawable/ic_perm_media_black_24dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:alpha="0.7"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    />

            </RelativeLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_collapseMode="parallax"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editName"
                android:inputType="text"
                android:hint="@string/address"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editAddress"
                android:inputType="text"
                android:hint="@string/address"
                />

            <Spinner
                android:id="@+id/universitySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/cuisineSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTimeNotes"
                android:inputType="text"
                android:hint="Timetables info"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editDescription"
                android:inputType="textMultiLine"
                android:hint="@string/shortDescription"/>

            <Button
                android:id="@+id/openingHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/openingHour"
                android:onClick="showTimePickerDialog" />

            <Button
                android:id="@+id/closingHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closingHour"
                android:onClick="showTimePickerDialog" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPayment"
                android:inputType="textMultiLine"
                android:hint="@string/payment"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editServices"
                android:inputType="textMultiLine"
                android:hint="@string/services"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/ic_cached_white_24dp"-->
        <!--app:layout_anchor="@id/editCoverPhoto"-->
        <!--app:layout_anchorGravity="bottom|right"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:layout_marginRight="16dp"/>-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done_white_24dp"
        app:layout_anchor="@id/scroll"
        app:layout_anchorGravity="bottom|right"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"/>



</android.support.design.widget.CoordinatorLayout>
